[package]
name = "ices-sdk"
version = "0.1.0"
edition = "2018"

# license = "IDK"
description = "The core for ICES SDK"
homepage = "https://github.com/icpfans-xyz/ices-contract"
repository = "https://github.com/icpfans-xyz/ices-contract"
readme = "https://github.com/icpfans-xyz/ices-contract/README.md"
documentation = "https://doc.ices.one"


[dependencies]
ic-cdk = "0.4.0"
candid = "0.7.13"
serde_cbor = "0.11.2"
serde_bytes = "0.11.5"
serde = { version = "1", features = ["derive"] }
serde_json = {version = "1.0"}

[lib]
doctest = false